--- a/src/components/Pages/sections/Section1.module.scss
+++ b/src/components/Pages/sections/Section1.module.scss
@@ -16,7 +16,7 @@
     .img {
         grid-row: 1/3;
         grid-column: 2/3;
-        background: url("../../../../assets/background.png");
+        background: url("../../../assets/background.png");
         background-size: cover;
         transform: translateX(3rem);
     }
